# edge_aware_surface_normal_calculator

./: .gitignore  CMakeLists.txt  README.md  example.py  requirements.txt  setup.py
config/: config.toml
include/: argparse.hpp  depth_frame.h  fast_arithmetic.h  struct.h  surface_normal_calculator.h  thinning.hpp  toml_reader.h  util.h
src/: bindings.cpp  main.cpp  ndarray_converter.cpp  toml_reader.cpp
